--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Jonathon Scott - Computer Science Student
+title: Jon T Scott - Professional Website
 email: JonScott20@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Jon T Scott is a computer science student at Cal Poly San Luis Obispo.
+  He is an aspiring software developer who takes pride in his work and enjoys contributing to a cohesive team projects.
+  Born and raised in the small town of Hailey, Idaho, he relocated to California for the booming tech industry.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
