--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Jon T Scott - Professional Website
+title: Jon T Scott
 email: JonScott20@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Jon T Scott is a computer science student at Cal Poly San Luis Obispo.
