--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Jon T Scott
+title: Jon T. Scott
 email: JonScott20@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Jon T Scott is a computer science student at Cal Poly San Luis Obispo.
+  Jon T. Scott is a computer science student at Cal Poly San Luis Obispo.
   He is an aspiring software developer who takes pride in his work and enjoys contributing to a cohesive team projects.
   Born and raised in the small town of Hailey, Idaho, he relocated to California for the booming tech industry.
 baseurl: "" # the subpath of your site, e.g. /blog
